# tunxiang-os

./: .commitlintrc.json  .cursorignore  .dockerignore  .editorconfig  .env.example  .env.gray.example  .env.prod.example  .env.staging.example  .gitallowed  .gitignore  .pre-commit-config.yaml  .schema-fix-marker  .secrets.baseline  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODEX.md  DEVLOG.md  Makefile  README.md  conftest.py  docker-compose.gray.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  marketplace.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  zhilian-os-mindmap.html
.claude/: CLAUDE.md
.claude/agents/: architect.md  docs-writer-zh.md  react-ts-frontend-optimizer.md  reviewer.md  tester.md
.claude/commands/: new-feature.md  review.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  claudemd-drift-check.yml  demo-go-no-go.yml  deploy.yml  frontend-ci.yml  integration-pg-tests.yml  k6-nightly.yml  migration-ci.yml  nightly-kds-e2e.yml  nightly-offline-e2e.yml  offline-e2e.yml  pr-check.yml  prometheus-port-audit.yml  python-ci.yml  remediation-gate.yml  rls-gate.yml  rls-runtime-p0-pg-tests.yml  service-freeze-check.yml  tier1-gate.yml  tier1-row-lock-concurrent.yml  toxiproxy-smoke.yml  ui-quality-gate.yml  weekly-health-check.yml
.harness/: README.md
.harness/inputs/: input-dev.yaml  input-pilot.yaml  input-prod.yaml  input-test.yaml  input-uat.yaml
.harness/pipelines/: cd-api-gateway.yaml  cd-tx-agent.yaml  cd-tx-analytics.yaml  cd-tx-brain.yaml  cd-tx-finance.yaml  cd-tx-growth.yaml  cd-tx-intel.yaml  cd-tx-member.yaml  cd-tx-menu.yaml  cd-tx-ops.yaml  cd-tx-org.yaml  cd-tx-supply.yaml  cd-web-admin.yaml  cd-web-crew.yaml  cd-web-kds.yaml  cd-web-pos.yaml  ci-api-gateway.yaml  ci-tx-agent.yaml  ci-tx-analytics.yaml  ci-tx-brain.yaml  ci-tx-finance.yaml  ci-tx-growth.yaml  (+27 more)
android-shell/: README.md  build.gradle  settings.gradle
demo/: DEMO-SETUP-GUIDE.md  demo-env.sh  demo-mac-setup.sh  demo-reset.sh  demo-stop.sh  demo-verify.sh  docker-compose.demo-full.yml  hardware-config.json  nginx-demo.conf  printer-setup.sh  sunmi-kds-d2s-config.json  sunmi-t2-config.json  sunmi-v2-config.json
docs/: BANQUET_MODULE_PLAN.md  D5-D12-mustfix-shouldfix-report.md  G10云仓_产品功能说明书.md  MIGRATION_GUIDE_v3.2.md  PHASE5_DEV_PLAN.md  RELEASE_NOTES_v3.2.md  a11y-baseline-2026-05.md  a2ui-protocol-cn.md  adapter-scorecard.md  agent-capability-matrix.md  agent-classification-mapping.md  agent-collaboration-standard.md  ai-agent-architecture-v1.md  ai-agent-modules-pages-routes-v1.md  ai-agent-p0-component-decomposition-v1.md  ai-agent-p0-pages-fields-v1.md  ai-agent-page-prototypes-v1.md  ai-marketing-automation-plan.md  api-route-catalog.md  april-merchant-delivery-gap-analysis-2026-04.md  architecture-correction-v1.md  architecture-store-terminals-stable-ai.md  audit-regression-2026-07.md  channel-aggregation-plan-2026-05-10.md  claude-dev-execution-plan-merchant-deploy.md  claude-dev-plan-u1.md  codex-claude-collaboration-protocol.md  collaboration-workflow.md  color-system.md  coverage-checklist-dine-in-hotpot-direct-2026.md  credential-cleanup-guide.md  credential-migration-guide.md  d1-constraint-checker-batch-plan.md  d3c-dish-pricing-training-pipeline-tbd.md  demo-api-reference.md  demo-playbook-store-fullflow.md  dependency-audit.md  dev-plan-2030-merged.md  dev-plan-60d-2026-05-09.md  dev-plan-flipos-gap-closure-2026Q2.md  (+118 more)
e2e/: README.md  package.json  playwright.config.ts  tsconfig.json
flags/: README.md
gitops/: README.md
output/: reservation-showcase.html
scripts/: DEPLOY_QUICKSTART.md  README.md  ab-experiment-verify.sh  auto-sync.sh  backfill_franchise_events.py  backup_tenant.sh  build-mac-installer.sh  check-service-freeze.py  check_alembic_chain.py  check_migrations.sh  check_rls_policies.py  check_rls_with_check.py  check_secrets.sh  check_service_freeze.sh  check_signoffs.sh  check_test_coverage.py  check_tier1_pass.sh  clauded-md-drift-check.py  code-fact-scan.py  codemod_safe_http_exception.py  codemod_utcnow.py  collect-offline-results.sh  cost-report.sh  create-demo-env.sh  create-prod-env.sh  db-bootstrap.sh  demo-reset.sh  demo_build_deploy.sh  demo_deploy.sh  demo_go_no_go.py  demo_prep_czyz.py  demo_quick_start.sh  demo_seed.py  deploy-pos.sh  deploy.sh  env-manager.sh  forge_register_resources.py  gate1-manual-ops.sh  gateway-import-smoke.sh  generate_requirements_locks.sh  (+42 more)
services/mcp-server/: pyproject.toml
services/mcp-server/src/: __init__.py  agent_registry.py  server.py
services/mcp-server/src/tests/: test_mcp_server.py
services/tx-pay/: Dockerfile  conftest.py  pyproject.toml
services/tx-pay/db-migrations/: README.md  alembic.ini
services/tx-pay/src/: __init__.py  deps.py  events.py  main.py  metrics.py  payment_service.py
services/tx-pay/src/api/: admin_routes.py  agent_routes.py  callback_routes.py  payment_routes.py
services/tx-pay/src/channels/: __init__.py  alipay.py  base.py  cash.py  credit_account.py  lakala.py  registry.py  shouqianba.py  stored_value.py  unionpay.py  wechat.py
services/tx-pay/src/orchestrator/: idempotency.py  saga.py  split_pay.py
services/tx-pay/src/protocols/: agent_payment.py  mcp_tools.py
services/tx-pay/src/routing/: engine.py
services/tx-pay/src/tests/: conftest.py  test_agent_payment.py  test_main_import_smoke_tier1.py  test_payment_routes.py  test_saga_idempotency.py  test_wechat_callback.py
services/tx-pay/tests/: __init__.py  test_alipay_callback_tier1.py  test_channel_metrics_tier1.py  test_health.py  test_metrics_auth_smoke.py  test_pay_channels_e2e_mock.py  test_shouqianba_callback_tier1.py  test_unionpay_skeleton_tier1.py  test_wechat_pay_method_dispatch_tier1.py
shared/: __init__.py  tenant_registry.py
tasks/: api-contracts.md  collab-sync.md  lessons.md  todo.md
tests/: conftest.py  test_collision_enforcer.py  test_cross_domain_integration.py  test_e2e_scenarios.py  test_migration_chain_v139_v149.py  test_rls_round63_services.py  test_sync_scheduler.py  test_v224_fix_rls_tenant_variable.py
(+7801 files in other folders)
