[project]
name = "tunxiang-os"
version = "3.0.0"
description = "TunxiangOS - AI-Native Restaurant Chain Operating System"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "S",    # bandit (security)
    "SIM",  # simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # assert (used in tests)
    "B008",   # function-call-in-default-argument (FastAPI Depends)
    "C901",   # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/tests/**/*.py" = ["S101", "S106"]  # allow assert and hardcoded passwords in tests
"**/migrations/**/*.py" = ["E501"]     # migration files can be long

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["services/*/src/tests", "edge/*/src/tests", "shared/*/tests"]
