[project]
name = "tunxiang-os"
version = "3.0.0"
description = "TunxiangOS - AI-Native Restaurant Chain Operating System"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "S",    # bandit (security)
    "SIM",  # simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # assert (used in tests)
    "B008",   # function-call-in-default-argument (FastAPI Depends)
    "C901",   # too complex
    "B904",   # raise-without-from-inside-except — widespread pre-existing pattern
    "F841",   # local variable assigned but never used — pre-existing in mock code
    "E402",   # module-level import not at top — intentional in some edge services
    "E741",   # ambiguous variable name — pre-existing (l, O, I)
    "B007",   # unused-loop-control-variable — pre-existing
    "B011",   # assert-false — pre-existing
    "B006",   # mutable-argument-default — pre-existing
    "B905",   # zip-without-explicit-strict — pre-existing
    "S105",   # hardcoded-password-string — false positives in config keys
    "S110",   # try-except-pass — pre-existing
    "S311",   # pseudo-random — mock data generators
    "S324",   # insecure-hash — md5 used for deterministic mock seeds only
    "SIM102", # collapsible-if — style preference
    "SIM103", # return-in-conditional — style preference
    "SIM105", # suppressible-exception — pre-existing try-except-pass
    "SIM108", # if-else-block-instead-of-ternary — style preference
    "SIM117", # multiple-with-statements — pre-existing
    "C401",   # unnecessary-generator-set — pre-existing
    "C408",   # unnecessary-collection-call — pre-existing
    "C414",   # unnecessary-list-call — pre-existing
    "C416",   # unnecessary-comprehension — pre-existing
    "E712",   # comparison-to-true — pre-existing
    "E701",   # multiple-statements-on-one-line — pre-existing
    "E731",   # lambda-assignment — pre-existing
    "F601",   # multi-key-dict-literal — pre-existing
    "F811",   # redefined-unused — pre-existing
    "B017",   # assert-raises-without-match — pre-existing
    "B023",   # function-uses-loop-variable — pre-existing
    "SIM110", # reimplemented-builtin — pre-existing
    "SIM116", # if-else-dict — pre-existing
    "SIM401", # use-ternary-operator — pre-existing
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/tests/**/*.py" = ["S101", "S106", "S311"]  # allow assert, hardcoded passwords, random in tests
"**/migrations/**/*.py" = ["E501"]     # migration files can be long
# Migration files often have trailing whitespace inside multi-line SQL string literals
"shared/db-migrations/**/*.py" = ["E501", "W291", "W293", "S608"]  # migrations use server-controlled SQL
# Backend SQL f-strings are server-controlled (not user input) — suppress S608 broadly
"services/**/*.py" = ["S608"]
"shared/events/**/*.py" = ["S608"]  # Same justification — server-side SQL, not user input
"shared/knowledge_store/**/*.py" = ["S608"]  # server-controlled graph/vector queries
"edge/**/*.py" = ["S608"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["services/*/src/tests", "edge/*/src/tests", "shared/*/tests"]
