[project]
name = "tunxiang-mcp-server"
version = "0.1.0"
description = "MCP Server for TunxiangOS - exposes 73 Agent actions as MCP tools"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "structlog>=24.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
tunxiang-mcp = "src.server:main_sync"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
